@@ -8,9 +8,10 @@ bin_PROGRAMS = rglclock
 
 libgdkgl_a_SOURCES = gdkgl.c
 
-libclock_a_SOURCES = simple.c module.cc options.cc clockoptions.cc
+libclock_a_SOURCES = simple.c module.cc glclock.cc \
+options.cc clockoptions.cc about.cc
 
-rglclock_SOURCES = glclock.cc profile.cc about.cc main.cc
+rglclock_SOURCES = profile.cc main.cc
 rglclock_LDADD = libclock.a libgdkgl.a ${GL_LIBS} ${GTK_LIBS}
 
 noinst_HEADERS = options.h profile.h glclock.h module.h simple.h autowidget.h gdkgl.h
